2016-07-03  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/data/themes/Makefile.am,
	client/gtk/data/themes/Nouvellia: Added new theme by
	Brian Mansberger <brian.mansberger@posteo.de>.

2016-06-21  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/chat.c: Removed unnecessary NULL check, found by cppcheck.
	* client/ai/greedy.c: Fixed use of uninitialzed variable, found by
	cppcheck.

2016-06-13  Roland Clobus <rclobus@rclobus.nl>
	* common/map.c: Removed double assignment, found by cppcheck.

2016-06-11  Roland Clobus <rclobus@rclobus.nl>
	* Makefile.am, MinGW/Makefile.am, MinGW/pioneers.nsi.in, configure.ac:
	Fixed missing icons for the MinGW port. Fixed File|Open crash in the
	editor for the MinGW port.

2016-06-10  Roland Clobus <rclobus@rclobus.nl>
	* server/turn.c: Apply patch #679 which fixes #290: Check for the
	winning condition at the beginning of the turn. This way to win will
	only occur when someone cuts the longest road in your favour.
	* macros/gnome-autogen.sh: MinGW requires automake 1.11.1
	* MinGW/loaders.cache: Regenerated

2016-03-21  Roland Clobus <rclobus@rclobus.nl>
	* Moved compiler warnings -Wcast-qual to --enable-warnings=full, because
	the GTK library issues this warning a lot.

2015-12-09  Roland Clobus <rclobus@rclobus.nl>
	* editor/gtk/editor.c: Fixed a message shown by scan-build (clang).
	The variable 'last_key' could be NULL.
	* client/gtk/monopoly.c, server/player.c: Fixed a message shown by
	scan-build (clang). The value stored in the variable was never read.

2015-05-31  Roland Clobus <rclobus@rclobus.nl>
	* Doxyfile.in: Fixed typo, as found by codespell.
	* client/gtk/data/themes/ccFlickr/board.png: Fixed rendering issues by
	adding an alpha layer to the image.

2015-05-30  Roland Clobus <rclobus@rclobus.nl>
	* client/ai/Makefile.am, client/ai/genetic.c, client/ai/genetic_core.c,
	client/ai/genetic_core.h: Created a header file for genetic_core.h. The
	core does not depend on functionality from Pioneers any more. Some