@@ -266,6 +266,23 @@ Section "!Minimal install" SEC01
   File "..\..\..\..\local\themes\Iceland\pasture_wool.png"
   File "..\..\..\..\local\themes\Iceland\sea.png"
   File "..\..\..\..\local\themes\Iceland\theme.cfg"
+  SetOutPath "$INSTDIR\themes\Nouvellia"
+  File "..\..\..\..\local\themes\Nouvellia\ATTRIB"
+  File "..\..\..\..\local\themes\Nouvellia\board.svg"
+  File "..\..\..\..\local\themes\Nouvellia\brick.svg"
+  File "..\..\..\..\local\themes\Nouvellia\desert.svg"
+  File "..\..\..\..\local\themes\Nouvellia\gold.svg"
+  File "..\..\..\..\local\themes\Nouvellia\grain.svg"
+  File "..\..\..\..\local\themes\Nouvellia\lumber.svg"
+  File "..\..\..\..\local\themes\Nouvellia\port-brick.svg"
+  File "..\..\..\..\local\themes\Nouvellia\port-grain.svg"
+  File "..\..\..\..\local\themes\Nouvellia\port-lumber.svg"
+  File "..\..\..\..\local\themes\Nouvellia\port-ore.svg"
+  File "..\..\..\..\local\themes\Nouvellia\port-wool.svg"
+  File "..\..\..\..\local\themes\Nouvellia\ore.svg"
+  File "..\..\..\..\local\themes\Nouvellia\sea.svg"
+  File "..\..\..\..\local\themes\Nouvellia\theme.cfg"
+  File "..\..\..\..\local\themes\Nouvellia\wool.svg"
   SetOutPath "$INSTDIR\themes\Tiny"
   File "..\..\..\..\local\themes\Tiny\board.png"
   File "..\..\..\..\local\themes\Tiny\brick-lorindol.png"
@@ -465,6 +482,22 @@ Section Uninstall
   Delete "$INSTDIR\themes\Tiny\brick-port.png"
   Delete "$INSTDIR\themes\Tiny\brick-lorindol.png"
   Delete "$INSTDIR\themes\Tiny\board.png"
+  Delete "$INSTDIR\themes\Nouvellia\wool.svg"
+  Delete "$INSTDIR\themes\Nouvellia\theme.cfg"
+  Delete "$INSTDIR\themes\Nouvellia\sea.svg"
+  Delete "$INSTDIR\themes\Nouvellia\port-wool.svg"
+  Delete "$INSTDIR\themes\Nouvellia\port-ore.svg"
+  Delete "$INSTDIR\themes\Nouvellia\port-lumber.svg"
+  Delete "$INSTDIR\themes\Nouvellia\port-grain.svg"
+  Delete "$INSTDIR\themes\Nouvellia\port-brick.svg"
+  Delete "$INSTDIR\themes\Nouvellia\ore.svg"
+  Delete "$INSTDIR\themes\Nouvellia\lumber.svg"
+  Delete "$INSTDIR\themes\Nouvellia\grain.svg"
+  Delete "$INSTDIR\themes\Nouvellia\gold.svg"
+  Delete "$INSTDIR\themes\Nouvellia\desert.svg"
+  Delete "$INSTDIR\themes\Nouvellia\brick.svg"
+  Delete "$INSTDIR\themes\Nouvellia\board.svg"
+  Delete "$INSTDIR\themes\Nouvellia\ATTRIB"
   Delete "$INSTDIR\themes\Iceland\theme.cfg"
   Delete "$INSTDIR\themes\Iceland\sea.png"
   Delete "$INSTDIR\themes\Iceland\pasture_wool.png"
@@ -605,6 +638,7 @@ Section Uninstall
   RMDir "$SMPROGRAMS\$ICONS_GROUP"
   RMDir "$INSTDIR\themes\Wesnoth-like"
   RMDir "$INSTDIR\themes\Tiny"
+  RMDir "$INSTDIR\themes\Nouvellia"
   RMDir "$INSTDIR\themes\Iceland"
   RMDir "$INSTDIR\themes\FreeCIV-like"
   RMDir "$INSTDIR\themes\Classic"
