@@ -2,6 +2,8 @@
 	* client/gtk/data/themes/Makefile.am,
 	client/gtk/data/themes/Nouvellia: Added new theme by
 	Brian Mansberger <brian.mansberger@posteo.de>.
+	* MinGW/pioneers.nsi.in: Integrated the Nouvellia theme in the
+	Windows installer.
 
 2016-06-21  Roland Clobus <rclobus@rclobus.nl>
 	* client/gtk/chat.c: Removed unnecessary NULL check, found by cppcheck.
